# qtknots

./: CMakeLists.txt  Doxyfile  GLpart.cpp  GLpart.h  Knot.cpp  Knot.h  README.md  clean.sh  crossings.cpp  crossings.h  function-example.txt  functions.cpp  functions.h  graphs.cpp  graphs.h  install.sh  log.cpp  main.cpp  matbase.cpp  matbase.h  matrix.cpp  modyfikatory.cpp  modyfikatory.h  no-graphic-run.sh  obraz.cpp  obraz.h  qtknots.pro  run.sh
function-samples/: T23.txt  compicated-function.txt  interesting1.txt  interesting2.txt  interesting3.txt  interesting4.txt  interesting5.txt  simple_function.txt
math_basics/: fourvector.cpp  fourvector.h  function.cpp  function.h  functions.cpp  map.cpp  matbase.cpp  matbase.h  matrix.h
points-samples/: interesting5-points  points  points2  points3  points4
src/: GLpart.cpp  GLpart.h  Knot.cpp  Knot.h  crossings.cpp  crossings.h  graphs.cpp  log.h  modyfikatory.h  obraz.cpp  obraz.h
src/math_basics/: fourvector.cpp  fourvector.h  function.cpp  function.h  map.cpp  map.h  matbase.cpp  matbase.h  matrix.h  parametr.cpp  parametr.h  sample-func.cpp  sample-func.h
src/no-graphics/: CMakeLists.txt  no-graphics-main.cpp
